--- a/g-lobby.html
+++ b/g-lobby.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phoenics Guide</title>
     
-    <link rel="icon" href="/GUIDES/assets/images/O.png">
-    <link rel="stylesheet" href="/GUIDES/assets/css/g-lobbydsn.css">
+    <link rel="icon" href="/assets/images/O.png">
+    <link rel="stylesheet" href="/assets/css/g-lobbydsn.css">
    
 </head>
 <body>
@@ -17,9 +17,9 @@
 
         <div id="btns">
 
-            <button class="mnl" onclick="document.location='/GUIDES/lambda.htm'">Guide /&Lambda; /</button>
-            <button class="mnl" onclick="document.location='/GUIDES/theta.htm'">Guide / &Theta; /</button>
-            <button class="mnl" onclick="document.location='/GUIDES/ph-f.htm'">Guide / f /</button>
+            <button class="mnl" onclick="document.location='lambda.htm'">Guide /&Lambda; /</button>
+            <button class="mnl" onclick="document.location='theta.htm'">Guide / &Theta; /</button>
+            <button class="mnl" onclick="document.location='ph-f.htm'">Guide / f /</button>
         
         </div>
 </body>
