--- a/lambda.htm
+++ b/lambda.htm
@@ -3,6 +3,7 @@
   <head>
     <link rel="icon" href="./assets/images/O.png">
     <link rel="stylesheet" href="./assets/css/dslambda.css" />
+    <title>LAMBDA GUIDE</title>
 
     <!--* THE LINKS FOR THE FONTS  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -62,9 +63,9 @@
 
     <div id="aln">
 
-    <button id="next" onclick="document.location='/4.0 (Pre-Test)/webpages/startscreen.htm'">Main</button>
+    <button id="next" onclick="document.location='g-lobby.html'">Main</button>
 
-    <button id="next" onclick="document.location='/GUIDES/theta.htm'">Next</button>
+    <button id="next" onclick="document.location='theta.htm'">Next</button>
 
     </div>
   </div>
