--- a/ph-f.htm
+++ b/ph-f.htm
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="/GUIDES/assets/images/O.png" />
-    <link rel="stylesheet" href="/GUIDES/assets/css/dsph-f.css" />
+    <link rel="icon" href="assets/images/O.png" />
+    <link rel="stylesheet" href="assets/css/dsph-f.css" />
+    <title>PH-F GUIDE</title>
 
     <!--* THE LINKS FOR THE FONTS  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -58,9 +59,9 @@
 
     <div id="aln">
 
-      <button id="next" onclick="document.location='/GUIDES/theta.htm'">Previous</button>
+      <button id="next" onclick="document.location='theta.htm'">Previous</button>
 
-      <button id="next" onclick="document.location='/4.0 (Pre-Test)/webpages/startscreen.htm'">Main</button>  
+      <button id="next" onclick="document.location='g-lobby.html'">Main</button>  
   
       </div>
       
