--- a/theta.htm
+++ b/theta.htm
@@ -4,6 +4,7 @@
    
     <link rel="icon" href="assets/images/O.png" />
     <link rel="stylesheet" href="assets/css/dstheta.css" />
+    <title>THETA GUIDE</title>
 
     <!--* THE LINKS FOR THE FONTS  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -57,11 +58,11 @@
     </div>
 
     <div id="aln">
-    <button id="next" onclick="document.location='/GUIDES/lambda.htm'">Previous</button>
+    <button id="next" onclick="document.location='lambda.htm'">Previous</button>
 
-    <button id="next" onclick="document.location='/4.0 (Pre-Test)/webpages/startscreen.htm'">Main</button>
+    <button id="next" onclick="document.location='g-lobby.html'">Main</button>
 
-    <button id="next" onclick="document.location='/GUIDES/ph-f.htm'">Next</button>
+    <button id="next" onclick="document.location='ph-f.htm'">Next</button>
   </div>
 
   </div>
