aight maybe'll work

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phoenics Guide</title>
     
-    <link rel="icon" href="/assets/images/O.png">
-    <link rel="stylesheet" href="/assets/css/g-lobbydsn.css">
+    <link rel="icon" href="O.png">
+    <link rel="stylesheet" href="g-lobbydsn.css">
    
 </head>
 <body>
