--- a/ph-f.htm
+++ b/ph-f.htm
@@ -61,7 +61,7 @@
 
       <button id="next" onclick="document.location='theta.htm'">Previous</button>
 
-      <button id="next" onclick="document.location='g-lobby.html'">Main</button>  
+      <button id="next" onclick="document.location='index.html'">Main</button>  
   
       </div>
       
