--- a/lambda.htm
+++ b/lambda.htm
@@ -63,7 +63,7 @@
 
     <div id="aln">
 
-    <button id="next" onclick="document.location='g-lobby.html'">Main</button>
+    <button id="next" onclick="document.location='index.html'">Main</button>
 
     <button id="next" onclick="document.location='theta.htm'">Next</button>
 
