--- a/theta.htm
+++ b/theta.htm
@@ -60,7 +60,7 @@
     <div id="aln">
     <button id="next" onclick="document.location='lambda.htm'">Previous</button>
 
-    <button id="next" onclick="document.location='g-lobby.html'">Main</button>
+    <button id="next" onclick="document.location='index.html'">Main</button>
 
     <button id="next" onclick="document.location='ph-f.htm'">Next</button>
   </div>
