--- a/theta.htm
+++ b/theta.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
    
-    <link rel="icon" href="assets/images/O.png" />
+    <link rel="icon" href="O.png" />
     <link rel="stylesheet" href="assets/css/dstheta.css" />
     <title>THETA GUIDE</title>
 
