--- a/lambda.htm
+++ b/lambda.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="./assets/images/O.png">
+    <link rel="icon" href="O.png">
     <link rel="stylesheet" href="./assets/css/dslambda.css" />
     <title>LAMBDA GUIDE</title>
 
