--- a/lambda.htm
+++ b/lambda.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="icon" href="O.png">
-    <link rel="stylesheet" href="./assets/css/dslambda.css" />
+    <link rel="stylesheet" href="dslambda.css" />
     <title>LAMBDA GUIDE</title>
 
     <!--* THE LINKS FOR THE FONTS  -->
