--- a/theta.htm
+++ b/theta.htm
@@ -3,7 +3,7 @@
   <head>
    
     <link rel="icon" href="O.png" />
-    <link rel="stylesheet" href="assets/css/dstheta.css" />
+    <link rel="stylesheet" href="dstheta.css" />
     <title>THETA GUIDE</title>
 
     <!--* THE LINKS FOR THE FONTS  -->
