--- a/ph-f.htm
+++ b/ph-f.htm
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="assets/images/O.png" />
-    <link rel="stylesheet" href="assets/css/dsph-f.css" />
+    <link rel="icon" href="O.png" />
+    <link rel="stylesheet" href="dsph-f.css" />
     <title>PH-F GUIDE</title>
 
     <!--* THE LINKS FOR THE FONTS  -->
