--- a/theta.htm
+++ b/theta.htm
@@ -2,8 +2,8 @@
 <html>
   <head>
    
-    <link rel="icon" href="assets/images/O.png" />
-    <link rel="stylesheet" href="assets/css/dstheta.css" />
+    <link rel="icon" href="O.png" />
+    <link rel="stylesheet" href="dstheta.css" />
     <title>THETA GUIDE</title>
 
     <!--* THE LINKS FOR THE FONTS  -->
@@ -66,6 +66,6 @@
   </div>
 
   </div>
-    <script src="function/theta.js"></script>
+    <script src="theta.js"></script>
   </body>
 </html>
