--- a/lambda.htm
+++ b/lambda.htm
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="./assets/images/O.png">
-    <link rel="stylesheet" href="./assets/css/dslambda.css" />
+    <link rel="icon" href="O.png">
+    <link rel="stylesheet" href="dslambda.css" />
     <title>LAMBDA GUIDE</title>
 
     <!--* THE LINKS FOR THE FONTS  -->
@@ -69,6 +69,6 @@
 
     </div>
   </div>
-    <script src="./function/lambda.js"></script>
+    <script src="lambda.js"></script>
   </body>
 </html>
